feat(api): make get discount by code public and update docs
